
*amd-adl-sdk-6.0 (25 Nov 2013)

  25 Nov 2013; Manuel Rüger <mrueg@gentoo.org> +amd-adl-sdk-6.0.ebuild,
  -amd-adl-sdk-3.0.ebuild, -amd-adl-sdk-5.0.ebuild:
  Version bump. Fix HOMEPAGE. Cleanup old.

  23 Nov 2013; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
  Add mrueg as maintainer, bug #492272

*amd-adl-sdk-5.0 (08 Jul 2013)

  08 Jul 2013; Michael Weber <xmw@gentoo.org> +amd-adl-sdk-5.0.ebuild:
  Version bump, RESTRICT=fetch (bug 475562)

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  25 Feb 2013; Agostino Sarubbo <ago@gentoo.org> amd-adl-sdk-4.0.ebuild:
  Stable for x86, wrt bug #430210

  11 Aug 2012; Agostino Sarubbo <ago@gentoo.org> amd-adl-sdk-4.0.ebuild:
  Stable for amd64, wrt bug #430210

*amd-adl-sdk-4.0 (22 May 2012)

  22 May 2012; Anthony G. Basile <blueness@gentoo.org> +amd-adl-sdk-4.0.ebuild:
  Version bump

  27 Apr 2012; Anthony G. Basile <blueness@gentoo.org> amd-adl-sdk-3.0.ebuild:
  Add missing dep on app-arch/unzip

  02 Apr 2012; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
  Update luke-jr's email address

*amd-adl-sdk-3.0 (23 Feb 2012)

  23 Feb 2012; Anthony G. Basile <blueness@gentoo.org> +amd-adl-sdk-3.0.ebuild,
  +metadata.xml:
  Initial commit, moved from luke-jr's bitcoin overlay