@@ -1,6 +1,6 @@
 DIST ADL_SDK_4.0.zip 2056192 SHA256 4265ee2f265b69cc39b61e10f79741c1d799f4edb71dce14a7d88509fbec0efa SHA512 6f0ae7ac5d0efc26a8fdabd61696402c119f5399531423fafd35f9c0da3d4181ca54b361e83b777ad719b64b335a55c02083f1cea7f4d01e86eacc032de29fb5 WHIRLPOOL b621a3eed79f91371639f46062ffd70a44d19b05f6c30dc6062781262d32eff34b6845857804175f224e883adccee28abed21264de6750498496ded1c3414d84
 DIST ADL_SDK_6.0.zip 2324420 SHA256 429f4fd1edebb030d6366f4e0a877cf105e4383f7dd2ccf54e5aef8f2e4242c9 SHA512 4af430f0a0eac347b0e3df39999abbf7a4281a1b01398845fd8e826b69c28b67fc062092eac0ef207ace943006ed4ccd8c6017049c2dfd3945914ea6153026f3 WHIRLPOOL acbdee1acba6520d467b4e7b0525c18dc9c1866611ac5fc52bec86c1ad1bf5b16570b032386bc8c2e83cb3926ff8bad25663f4c718d00af9fd55e9648de05c53
 EBUILD amd-adl-sdk-4.0.ebuild 826 SHA256 191b968522430392ff87e75f9e964408bc00ae175440bd0d5a9de99a93f4f508 SHA512 85ab3818e5c873a986ebb78471f0b4f103078e2f3a02d463d038da1c9184426a94abef6be2d468f094c9b536c9bfdf3ff935d42b788f65804a10274ab8a6182f WHIRLPOOL f35e62bb342a088198558c631d2ebb6eb462dacecad4ae4b11a366c51062d144c557c26de807f1fb864d99d0756d97f28849402fdd58b123aaae924a591817c9
-EBUILD amd-adl-sdk-6.0.ebuild 984 SHA256 f8ff648f5feac6e12731818fda41a370eacf33a87e2ab20d58e646373762f9fb SHA512 a7a0aa34b211c3eadf8794ae4b883753981fa8507cea4e1dd8200929d2086e5275bce9c83dbbcaf6da824c7f4848faf38d27127ca82e6af883fd87ec0f7bd40a WHIRLPOOL 5a6066d8d4a42d3b3b7936ab856585b0e480502c4ef5c78076ece7aafe84553d23ac1d35a88c65ea80113133ac02e25b5956014bdd12278c0bf775f4bad50358
-MISC ChangeLog 1316 SHA256 4dfb48bdfd7e5f3613caf7ded384825efebb8e5db01536a71f60a402a7782567 SHA512 e20cbe3ac564f97eb42c608f0c146a425403b86cc067f8127420fd8aa1b6baa3837a0475f301e25663d12e01315449c2acc3bceffe4d75ad6c9495dc5a826494 WHIRLPOOL 389ca99d801b724886f21286ee2100f404795cf34ce2db1913b16c7df575cca7f8042dc8f11797df3944bcca5ad93f30bae593073f0388a6dedc39414ce996ac
+EBUILD amd-adl-sdk-6.0-r1.ebuild 1082 SHA256 e5c2ad6eee3201176e7fd8567ec6a032f2d3797ac0ef8411f1ac2e67db301afb SHA512 3ae07f08e64da16b1a7cb73c636be9092d9060552c1c1db5e4bf4e3e80b439ae55d234e16c49588314fab0d7241e7f88f9465de9d615fcf552921920ce94543b WHIRLPOOL f8075835613131ed1a470c4832625d9eff6fa97eb8eab60f225aeaa58bb320046053f08a3a9753ce39a9fa1912911dad347a9bbadf4918d8e5e89da97ae32962
+MISC ChangeLog 1477 SHA256 10ce749f291305466f727d5f50f88dec64f7ed5b7633cec40adafb7f75cc0533 SHA512 787e1e2802c0008d2294ac2e12306b12bd7d4c0741826a78feafda3f7113acdfc2cb41e308df611804f4ec96a32bcd6ab3b1af960d84f8650571d0ad3f219b01 WHIRLPOOL 7f01af82d91e893bb1818f591bc8a83f4a40ea2154b2c447d57a0409cef76973d54d14acc04315098c2df93ca0cda39b4827593202442ff56296239f57aef0f8
 MISC metadata.xml 330 SHA256 087ea49bd54a0ea3232bdb174caf9f6f3c47c02eff4e251ae44b8a77c19afc70 SHA512 66aaa25b72464537676f71f86963d764b03c1bf41067009b10fe9180419570442515dfef808b241eb2f64c10fbfaa42ed0bde587ba1921bb994f5ac25116ce27 WHIRLPOOL df36f1b32cb272e7de01491f24ed19e5840fe443dd19317122f22e7d5062e7a3ae831b079f7087666fc1befe8b71b61759737e0f9821dd9648feb67fb6255d6f
